[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bianca"
version = "0.1.1"
description = "Bianca package"
keywords = ["llm", "llama", "agent"]
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "minijinja"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bianca*"]
